Bug 473024 - Have more files than my SSD can handle
Summary: Have more files than my SSD can handle
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-05 06:20 UTC by K
Modified: 2023-08-06 12:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Programm result and my actual disk space (199.03 KB, image/png)
2023-08-05 06:20 UTC, K
Details

Note You need to log in before you can comment on or make changes to this bug.
Description K 2023-08-05 06:20:01 UTC
Created attachment 160748 [details]
Programm result and my actual disk space

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Choose the scan folder
2. Choose disk C
3. Run the scan

OBSERVED RESULT
800+ Gb of files

EXPECTED RESULT
Less than 500 Gb of files (because I have a 500Gb SSD)

SOFTWARE/OS VERSIONS
Windows:  Windows 11 Pro


ADDITIONAL INFORMATION
Comment 1 Harald Sitter 2023-08-05 08:26:46 UTC
Can you please check what is causing the huge excess of data in Users/? If we don't find out what type of file is causing this problem we cannot fix it.
Comment 2 K 2023-08-05 12:14:02 UTC
Yep, no problem. Follow all the way to 500Gb+ file and it's "userdata.img" from the Google Play games application. Here is screenshot - https://drive.google.com/file/d/1OW_nYIAIDNW-V7cKeF6UG9pF5d494M_W/view?usp=sharing 

I use Google Play games on my laptop sometimes. Download link - https://play.google.com/googleplaygames

I hope it helps you fix the problem.
Comment 3 Harald Sitter 2023-08-05 21:21:52 UTC
Thanks!
Comment 4 Bug Janitor Service 2023-08-05 21:39:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/92
Comment 5 Harald Sitter 2023-08-06 12:13:55 UTC
Git commit 64403badec78455e18cb4c347412fc426341d5bb by Harald Sitter.
Committed on 06/08/2023 at 01:42.
Pushed by sitter into branch 'master'.

windows: get the compressed size for compressed and sparse files

the logic size is distinctly not the correct size in these scenarios, in
particular a sparse file may be larger than the disk but only be filled
to a tiny degree.

M  +54   -0    autotests/directoryIteratorTest.cpp
M  +12   -2    src/windowsWalker.cpp

https://invent.kde.org/utilities/filelight/-/commit/64403badec78455e18cb4c347412fc426341d5bb
Comment 6 Harald Sitter 2023-08-06 12:26:24 UTC
Git commit f0eced30fa37f04bb0ff45ec8ea75def67606ea5 by Harald Sitter.
Committed on 06/08/2023 at 14:20.
Pushed by sitter into branch 'release/23.08'.

windows: get the compressed size for compressed and sparse files

the logic size is distinctly not the correct size in these scenarios, in
particular a sparse file may be larger than the disk but only be filled
to a tiny degree.


(cherry picked from commit 64403badec78455e18cb4c347412fc426341d5bb)

M  +54   -0    autotests/directoryIteratorTest.cpp
M  +12   -2    src/windowsWalker.cpp

https://invent.kde.org/utilities/filelight/-/commit/f0eced30fa37f04bb0ff45ec8ea75def67606ea5