windows: get the compressed size for compressed and sparse files

the logic size is distinctly not the correct size in these scenarios, in
particular a sparse file may be larger than the disk but only be filled
to a tiny degree.

BUG: 473024